--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,17 @@ input[type=number]::-webkit-outer-spin-button {
     appearance: none;
     margin: 0; 
 }
+
+
+
+.customScrollbar::-webkit-scrollbar
+{
+	width: 6px;
+	background-color: #F5F5F5;
+}
+
+.customScrollbar::-webkit-scrollbar-thumb
+{
+	background-color: #CA7229;
+	border: 2px solid #CA7229;
+}
