--- a/src/index.css
+++ b/src/index.css
@@ -2,24 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
-input[type=number]::-webkit-inner-spin-button, 
-input[type=number]::-webkit-outer-spin-button { 
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    margin: 0; 
+    margin: 0;
 }
 
 
 
-.customScrollbar::-webkit-scrollbar
-{
-	width: 6px;
-	background-color: #F5F5F5;
+.customScrollbar::-webkit-scrollbar {
+    width: 6px;
+    background-color: #F5F5F5;
 }
 
-.customScrollbar::-webkit-scrollbar-thumb
-{
-	background-color: #CA7229;
-	border: 2px solid #CA7229;
+.customScrollbar::-webkit-scrollbar-thumb {
+    background-color: #CA7229;
+    border: 2px solid #CA7229;
 }
